objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CRM_Mailing_Unit_Number__c</fullName>
        <label>Mailing Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Marketing_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Borrow__c</fullName>
        <label>Maximum borrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Repayment__c</fullName>
        <label>Maximum repayment p.a.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Monthly_Repayments__c</fullName>
        <label>Monthly repayments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Months_Self_Employed_Borrower_1__c</fullName>
        <label>Months employed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Months_Self_Employed_Borrower_2__c</fullName>
        <label>Months self employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mortgage_Arrears__c</fullName>
        <label>Mortgage arrears</label>
        <picklist>
            <picklistValues>
                <fullName>0 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_No_of_Staff__c</fullName>
        <label>No. of Staff</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Number_of_Periods__c</fullName>
        <label>Number of periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Other_Annual_Liabilities__c</fullName>
        <label>Other annual liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Other_Annual_Mortgage__c</fullName>
        <label>Other annual mortgage payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Other_commercial_asset__c</fullName>
        <label>Additional assets financed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Owner_Occupied__c</fullName>
        <label>Owner Occupied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_PAF_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Pepper_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pepper customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Persona__c</fullName>
        <label>Borrowing Options</label>
        <picklist>
            <picklistValues>
                <fullName>A Home Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Refinancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Home Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Home Loan Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction loans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Postcode__c</fullName>
        <label>Postcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Call_Date__c</fullName>
        <label>Preferred call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Call_Time__c</fullName>
        <label>Preferred call time</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Contact_Method__c</fullName>
        <label>Preferred contact method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Category__c</fullName>
        <label>Product category</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Variant__c</fullName>
        <label>Product Variant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Name__c</fullName>
        <label>Property Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Type__c</fullName>
        <label>Property type</label>
        <picklist>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Value__c</fullName>
        <label>Property value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Purchase_Price__c</fullName>
        <label>Purchase price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Raw_Data__c</fullName>
        <label>Raw web form data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Reference_Amount__c</fullName>
        <label>Refinance amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Referral_Reason__c</fullName>
        <label>Follow Up Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Referral_Source__c</fullName>
        <label>Follow Up Attempt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Refinance_Amount__c</fullName>
        <label>Refinance amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Rental_Income_Frequency__c</fullName>
        <label>Rental income frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Security_Type__c</fullName>
        <label>Security Type</label>
        <picklist>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Land</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Status_Reason__c</fullName>
        <label>Status reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Cannot Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Serious/Researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcode/Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Contact Post Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Direct To New Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn From Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Number__c</fullName>
        <label>Street Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Type__c</fullName>
        <label>Street Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_T_C_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Term__c</fullName>
        <label>Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Test_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this is a test lead and should be removed from the system once testing is complete.</description>
        <label>Test Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Total_Commitments__c</fullName>
        <label>Total commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Type_of_commercial_assets_accredited__c</fullName>
        <label>Pepper Assets Financed</label>
        <picklist>
            <picklistValues>
                <fullName>Yellow goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bikes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Type_of_consumer_assets_accredited__c</fullName>
        <label>Consumer assets to be accredited</label>
        <picklist>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bikes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Typical_end_customer_persona__c</fullName>
        <label>Typical end customer persona</label>
        <picklist>
            <picklistValues>
                <fullName>Persona A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Verified_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_What_is_your_current_annual_income__c</fullName>
        <defaultValue>0</defaultValue>
        <label>What is your current annual income?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Where_did_you_hear_about_us__c</fullName>
        <label>Where did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Pepper customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Where_the_property_is_located__c</fullName>
        <label>Where the property is located(postcode)?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CRM_Years_Self_Employed_Borrower_1__c</fullName>
        <label>Years employed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_cid__c</fullName>
        <label>Cid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_queryParamsString__c</fullName>
        <label>Cid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>18 Character Version of the Lead ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Auto_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates customer is interested in Auto Finance products</description>
        <inlineHelpText>Indicates customer is interested in Auto Finance products</inlineHelpText>
        <label>Auto Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates customer is interested in Mortgage products</description>
        <inlineHelpText>Indicates customer is interested in Mortgage products</inlineHelpText>
        <label>Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Personal_Loans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates customer is interested in Personal Loans products</description>
        <inlineHelpText>Indicates customer is interested in Personal Loans products</inlineHelpText>
        <label>Personal Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>Stores the last time a lead status changes - this is the definition of Activity on the lead.  Populated by workflow rule.</description>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSystemID__c</fullName>
        <externalId>true</externalId>
        <label>LeadSystemID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Nurture_Enter_Date__c</fullName>
        <description>Date a lead entered Lead Nurture</description>
        <label>Lead Nurture Enter Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag to indicate whether a lead should be nurtured or not</description>
        <label>Lead Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Textbox__c</fullName>
        <label>Promo Textbox</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrer_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Referrer Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Campaign__c</fullName>
        <description>Maps to Google Analytics parameter utm_campaign</description>
        <label>Web Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Content__c</fullName>
        <description>Maps to Google Analytics parameter utm_content</description>
        <label>Web Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_ID__c</fullName>
        <description>Field to store Google Analytics ID</description>
        <label>Web Analytics ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Medium__c</fullName>
        <description>Maps to Google Analytics parameter utm_medium</description>
        <label>Web Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Referrer__c</fullName>
        <description>Google Analytics Referrer value</description>
        <label>Web Analytics Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Source__c</fullName>
        <description>Maps to utm_source in Google Analytics</description>
        <label>Web Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Term__c</fullName>
        <description>Maps to Google Analytics parameter utm_term</description>
        <label>Web Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shortFormVariationPage__c</fullName>
        <description>When doing A/B testing this field will be used to identify whether the record is from the original or a variation.  For example &apos;AB-original&apos; to identify lead from A; &apos;AB-variation-1&apos; to identify lead from B</description>
        <inlineHelpText>A/B Testing Variation</inlineHelpText>
        <label>shortFormVariationPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>